# PorousMediaLab

./: .coveragerc  .gitignore  .pypirc  CHANGELOG.md  FT_column_example.ipynb  FT_column_example_m_scale_T.ipynb  FT_presentation.ipynb  FT_presentation_non_const_bc.ipynb  FT_presentation_with_boundary_conditions.ipynb  LICENSE  Makefile  MyLake_fake.m  OdeSolver.py  PorousMediaLab.py  README.md  RichardsModel.py  Sediment_example.ipynb  changelog.txt  class_single_run.py  examples.ipynb  ftc_example.py  install.sh  lake_sediment.py  pvc_1996_sediment.py  pyproject.toml  pytest.ini  rk4_with_eval.py  sediment.m  sediment.py  sediment_class.py  sediment_init_v2.m  sediment_v2.m  sediment_v2.sublime-project  sediment_v2.sublime-workspace  setup.cfg  setup.py  single_run.m  single_run.py  test.m  test.py  (+3 more)
.ipynb_checkpoints/: FT_column_example-checkpoint.ipynb  examples-checkpoint.ipynb
benchmarks/: benchmark_ode_solver.py  benchmark_optimizations.py
docs/: _config.yml  batch-guide.md  column-guide.md  index.html  index.md  publishing.md  quickstart.md
examples/: .gitignore  Analytical Solutions.ipynb  Batch - Calcite-Gypsum Evaporation.ipynb  Batch - Calibration - Roden 2008.ipynb  Batch - Evaporation and Calcite Precipitation.ipynb  Batch - Roden 2008.ipynb  Batch - Titration Curve NaOH.ipynb  Batch - Titration Curve.ipynb  Batch - Watson 2003.ipynb  Batch experiment - Calcite Precipitation.ipynb  Batch experiment - Calcite-Gypsum Evaporation.ipynb  Batch experiment - Evaporation and Calcite Precipitation.ipynb  Batch experiment - Gypsum Dissolution.ipynb  Batch experiment - Titration Curve.ipynb  Batch experiment - Titration.ipynb  C6H12O6.csv  CH3COO.csv  Calibration - Batch - Roden 2008.ipynb  Column - Calcite-Gypsum precipitation.ipynb  Column - Freeze-Thaw.ipynb  Column - Sediment - Competition.ipynb  Column - Sediment.ipynb  FT_presentation_acid_base.ipynb  FT_presentation_simple.ipynb  FT_presentation_simple_2.ipynb  FT_presentation_simple_3.ipynb  Fe2.csv  Fe2sorb.csv  FeOOH.csv  H2.csv  HS.csv  NO3.csv  O2.csv  POM.csv  Plots in the paper.ipynb  SO4.csv  X_A.csv  X_F.csv  (+14 more)
(+129 files in other folders)
